== 0.22.4

== 0.22.3

* Enhancements
  * Fixed the way popups appear on smaller devices

== 0.22.2

* Enhancements
  * Use Contour for User account Confirmations and Unlocks

== 0.22.1

* Enhancements
  * Editing stickies from the sticky list or project page now redirects back to the sticky list or project page, respectively, after the sticky is updated
  * Template creation page cleaned up
  * Table Headers now use the same styling
  * Tags updated so the bottom is not cut off
  * Tags in emails now have the text displayed in white to match the way they are displayed in the web application

* Bug Fix
  * Fix Registration page to use new Contour login attributes

== 0.22.0

* Enhancements
  * Using Contour 1.0.0.beta with Twitter-Bootstrap CSS and JS
  * Sticky filters can now be reset
  * Groups can now be created from the project page
  * Default calendar options added when user registers

== 0.21.0

* Enhancements
  * Stickies can now be completed with one click on the calendar
  * Sticky filters are now saved and navigating to and from the sticky list will retain selected filters
  * API expanded and now allows stickies index to be retrieved as JSON objects
    * Sticky JSON API actions for create, update, show, and index now available
  * Using Rails 3.2.3

* Refactoring
  * Comments model simplified and deprecated ability to comment on projects or other comments

* Bug Fix
  * Fixed graphical bug that caused table rows borders to disappear in Google Chrome
  * Fixed bug where sticky description would shift after completing an inline sticky and moving the mouse
  * Fixed bug in display of overall graph for users with identical names
  * Fixed bug where selecting too many tags for sticky filters would generate a slow search

== 0.20.0

* Enhancements
  * Stickies can now be marked as complete directly in the list view
  * Service Accounts can now be used by other applications to authenticate users through the use of application specific tokens