@@ -1,1 +1,1 @@
-rvm 1.9.3-p125
+rvm 1.9.3-p194
