@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'rails',                '3.2.3'
+gem 'rails',                '3.2.5'
 
 # Database Adapter
 # Install instructions for Windows: http://blog.mmediasys.com/2011/07/07/installing-mysql-on-windows-7-x64-and-using-ruby-with-it/
@@ -9,8 +9,8 @@ gem 'thin',                 '~> 1.3.1',           :platforms => [ :mswin, :mingw
 gem 'eventmachine',         '~> 1.0.0.beta.4.1',  :platforms => [ :mswin, :mingw ]
 
 # Gems used by project
-gem 'contour',              '~> 1.0.0.beta10'
-gem 'kaminari'
+gem 'contour',              '~> 1.0.1'
+gem 'kaminari',             '~> 0.13.0'
 gem 'ri_cal',               '~> 0.8.8'
 
 # Gems used only for assets and not required
@@ -28,5 +28,5 @@ group :test do
   # Pretty printed test output
   gem 'win32console',                             :platforms => [ :mswin, :mingw ]
   gem 'turn',               '~> 0.9.5'
-  gem 'simplecov',          '~> 0.6.2',           :require => false
+  gem 'simplecov',          '~> 0.6.4',           :require => false
 end
