@@ -1,24 +1,24 @@
 jQuery ->
-  $(".datepicker").datepicker
-    showOtherMonths: true
-    selectOtherMonths: true
-    changeMonth: true
-    changeYear: true
+  # $(".datepicker").datepicker
+  #   showOtherMonths: true
+  #   selectOtherMonths: true
+  #   changeMonth: true
+  #   changeYear: true
 
-  $("#ui-datepicker-div").hide()
+  # $("#ui-datepicker-div").hide()
 
-  $(".pagination a, .page a, .next a, .prev a").live("click", () ->
-    return false if $(this).parent().is('.active, .disabled, .per_page')
-    $.get(this.href, null, null, "script")
-    false
-  )
+  # $(".pagination a, .page a, .next a, .prev a").live("click", () ->
+  #   return false if $(this).parent().is('.active, .disabled, .per_page')
+  #   $.get(this.href, null, null, "script")
+  #   false
+  # )
 
-  $(".per_page a").live("click", () ->
-    object_class = $(this).data('object')
-    # showWaiting(this, '', false)
-    $.get($("#"+object_class+"_search").attr("action"), $("#"+object_class+"_search").serialize() + "&"+object_class+"_per_page="+ $(this).data('count'), null, "script")
-    false
-  )
+  # $(".per_page a").live("click", () ->
+  #   object_class = $(this).data('object')
+  #   # showWaiting(this, '', false)
+  #   $.get($("#"+object_class+"_search").attr("action"), $("#"+object_class+"_search").serialize() + "&"+object_class+"_per_page="+ $(this).data('count'), null, "script")
+  #   false
+  # )
 
   $("#comments_search input").change( () ->
     $.get($("#comments_search").attr("action"), $("#comments_search").serialize(), null, "script")
